--- a/final-submission/glossar.tex
+++ b/final-submission/glossar.tex
@@ -127,7 +127,7 @@
 
 \newglossaryentry{node-state}
 {
-    name={Node State},
+    name={node state},
     description={TODO: Also link the state attachment}
 }
 
