--- a/latex_template.tex
+++ b/latex_template.tex
@@ -26,6 +26,7 @@ consistentlayout, % Uncomment to change the layout of the declaration, abstract 
 \usepackage{diagbox}
 \usepackage{rotating}
 \usepackage{makecell}
+\usepackage{float}
 \usepackage{url}
 \usepackage[autostyle=true]{csquotes} % Required to generate language-dependent quotes in the bibliography
 
